# money-flow-multiplier

./: .gitignore  LICENSE  mfm.ipynb  old_simulation.ipynb  pyproject.toml  start.ipynb
