[tool.poetry]
name = "trading-algorithm"
version = "0.1.0"
description = ""
authors = ["Dmitriy Bazanov <zugzvangg1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
