[tool.poetry]
name = "trading-algorithm"
version = "0.1.0"
description = ""
authors = ["Dmitriy Bazanov <zugzvangg1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"
matplotlib = "^3.5.2"
loguru = "^0.6.0"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
